# Copyright (c) 2018 The Prelude Authors.
# Use of this source code is governed by MIT license that can be
# found in MIT-LICENSE file.

# get familiar with mojo and service, ref: services/service_manager/README.md
# workflow:
# 1. define interface (.mojom) and check
#   a) define mojom files and add BUILD.gn, add target to parent BUILD.gn files
# 2. define service file (c++)
# 3. unit test service

group("excerpt04_service") {
  testonly = true
  deps = [
    "interfaces",   # not needed once targets below are added
    "single_class_service_impl",
    "multi_class_service_impl",
    "executable_client",
    "client_with_resource",
  ]
}
