# Copyright (c) 2018 The Prelude Authors.
# Use of this source code is governed by MIT license that can be
# found in MIT-LICENSE file.

shared_library("bark_ambulance") {
  sources = [
    "bark_ambulance.cpp",
  ]
  defines = [ "HOWL_IMPLEMENTATION" ]
}

static_library("bark_food") {
  sources = [
    "bark_food.cpp",
  ]
}

source_set("sleep_run") {
  sources = [
    "sleep_run.cpp",
  ]
}

executable("hello_puppy") {
  output_name = "hello_bogart"
  sources = ["hello_bogart.cpp", ]
  deps = [
    ":bark_food",
    ":bark_ambulance",
    ":sleep_run",
  ]
}