# Copyright (c) 2018 The Prelude Authors.
# Use of this source code is governed by MIT license that can be
# found in MIT-LICENSE file.

import("//prelude/excerpt02_base/etude.gni")

group("message_loop") {
  deps = [
    ":hello_dialog",
    ":ui_message_loop_sample",
  ]
}

win_etude("hello_dialog") {
  sources = [
    "hello_dialog.cpp",
  ]

  libs = [ "comctl32.lib" ]
}

win_etude("ui_message_loop_sample") {
  sources = [
    "ui_message_loop_sample.cpp",
  ]
}