# Copyright (c) 2018 The Prelude Authors.
# Use of this source code is governed by MIT license that can be
# found in MIT-LICENSE file.

import("//prelude/excerpt02_base/etude.gni")

group("misc") {
  deps = [
    ":debug_attach",
  ]
}

win_etude("debug_attach") {
  sources = [
    "debug_attach.cpp",
  ]
}