# Copyright (c) 2018 The Prelude Authors.
# Use of this source code is governed by MIT license that can be
# found in MIT-LICENSE file.

import("//testing/test.gni")

group("string") {
  testonly = true
  deps = [
    ":str_cat",
  ]
}

test("str_cat") {
  testonly = true
  output_name = "str_cat_test"
  sources = [
    "//prelude/excerpt02_base/unit_test/run_all_unittests.cpp",
    "str_cat.cpp",
  ]

  deps = [
    "//base",
    "//base/test:test_support",
  ]
}